--- a/ex5-form.html
+++ b/ex5-form.html
@@ -13,19 +13,19 @@
     <div class="container mt-5">
         <form>
             <div class="row g-3">
-                <div class="mb-3 col-4">
+                <div class="mb-3 col-md">
                     <label for="fullName" class="form-label">Full Name</label>
                     <input type="text" id="fullName" class="form-control">
                 </div>
 
                 <!-- Email -->
-                <div class="mb-3 col-4">
+                <div class="mb-3 col-md">
                     <label for="email" class="form-label">Email address</label>
                     <input type="email" id="email" class="form-control">
                 </div>
 
                 <!-- Gender -->
-                <div class="mb-3 col-4">
+                <div class="mb-3 col-lg-4">
                     <label class="form-label d-block">Gender</label>
                     <div class="form-check d-inline-block me-3">
                         <input type="radio" class="form-check-input" name="gender" id="male" value="male">
@@ -38,7 +38,7 @@
                 </div>
 
                 <!-- Country -->
-                <div class="mb-3 col-4">
+                <div class="mb-3 col-md">
                     <label for="country" class="form-label">Country</label>
                     <select id="country" class="form-select">
                         <option selected>Select your country</option>
@@ -49,7 +49,7 @@
                 </div>
 
                 <!-- Subscribe -->
-                <div class="mb-3 col">
+                <div class="mb-3 col-lg-8">
                     <div class="mt-4 form-check">
                         <input type="checkbox" id="subscribe" class="form-check-input">
                         <label for="subscribe" class="form-check-label">
